--- a/css/casuu.webflow.css
+++ b/css/casuu.webflow.css
@@ -7,7 +7,7 @@ body {
 }
 h1 {
   margin: 10px 0px;
-  color: #8a6d2f;
+  color: white;
   font-size: 44px;
   line-height: 54px;
   font-style: normal;
@@ -71,7 +71,7 @@ p {
   float: none;
   border-top-right-radius: 2px;
   border-bottom-right-radius: 2px;
-  background-color: #1abc9c;
+  background-color: #18c7aa;
   -webkit-transition: background-color 300ms ease;
   -o-transition: background-color 300ms ease;
   transition: background-color 300ms ease;
@@ -200,9 +200,9 @@ p {
   margin-left: 9px;
 }
 .navbar {
-  padding-top: 7px;
-  padding-bottom: 12px;
-  border-top: 4px solid #ff266f;
+  padding-top: 22px;
+  padding-bottom: 26px;
+  border-top: 4px none #ff266f;
   background-color: white;
 }
 .right-nav {
@@ -243,9 +243,11 @@ p {
   padding-bottom: 90px;
   border-top-color: #ff266f;
   background-color: transparent;
-  background-image: url('../images/od4.jpg'), url('../images/od3.jpg');
-  background-position: 50% 100%, 50% 100%;
-  background-size: cover, cover;
+  background-image: url('../images/23_mini.jpg'), url('../images/22.jpg'), url('../images/21.jpg');
+  background-position: 50% 50%, 50% 50%, 50% 50%;
+  background-size: cover, cover, cover;
+  background-repeat: repeat, repeat, repeat;
+  background-attachment: scroll, scroll, scroll;
   text-align: center;
 }
 .section.hero.success {
@@ -255,7 +257,8 @@ p {
   background-color: #f2f2f2;
 }
 .section.grey.ver2 {
-  padding-bottom: 0px;
+  padding-top: 70px;
+  padding-bottom: 45px;
 }
 .section.yellow {
   background-color: #fac960;
@@ -284,6 +287,11 @@ p {
 .section.intro {
   padding-top: 45px;
   padding-bottom: 45px;
+}
+.section.main-img {
+  padding-top: 90px;
+  padding-bottom: 0px;
+  background-color: #ff8f70;
 }
 .grey-heading {
   margin-top: 0px;
@@ -330,16 +338,20 @@ p {
   color: white;
   font-size: 56px;
   line-height: 56px;
-  font-weight: 300;
-  text-shadow: none;
+  font-weight: 400;
+  text-shadow: rgba(255, 255, 255, 0.85) 0px 0px 2px;
 }
 .txt-catch.arakawa2 {
   font-size: 23px;
   text-shadow: none;
 }
 .txt-subscription {
-  margin-top: 5px;
+  margin-top: 21px;
+  margin-left: 25px;
+  float: left;
+  color: #262c46;
   font-size: 16px;
+  font-weight: 400;
 }
 .txt-smallcopy {
   font-size: 26px;
@@ -348,6 +360,7 @@ p {
 .txt-smallcopy.teachme {
   padding-right: 5px;
   padding-left: 5px;
+  color: rgba(0, 0, 0, 0.49);
   text-shadow: none;
 }
 .txt-smallcopy.tobig {
@@ -374,6 +387,7 @@ p {
   margin-right: 0px;
   padding-right: 20px;
   padding-left: 20px;
+  color: rgba(0, 0, 0, 0.49);
   font-size: 23px;
   line-height: 27px;
   text-align: left;
@@ -382,6 +396,7 @@ p {
 .link-block.w--current {
   display: inline-block;
   width: auto;
+  float: left;
 }
 .cloumns {
   padding-right: 0px;
@@ -397,16 +412,50 @@ p {
   text-align: center;
 }
 .img-1 {
-  margin-top: 0px;
+  width: 60%;
+  margin-top: 20px;
   margin-bottom: 0px;
+}
+.img-2 {
+  width: 85%;
+  margin-top: -40px;
+}
+.img-3 {
+  width: 85%;
+  margin-top: 20px;
 }
 .img-logo {
   display: inline-block;
+  width: 125px;
 }
 ._0cal {
   padding-right: 0px;
   padding-left: 0px;
   font-size: 13px;
+}
+.img-holidays {
+  width: 95%;
+  margin-top: -60px;
+  margin-left: 0px;
+  float: right;
+}
+.txt-head {
+  text-shadow: none;
+}
+.txt-head2 {
+  margin-top: 30px;
+  margin-bottom: 0px;
+  color: white;
+  font-size: 24px;
+  line-height: 40px;
+  text-shadow: none;
+}
+.img-pointbutton {
+  width: 70%;
+  margin-top: 5px;
+}
+.img-pointbutton:hover {
+  opacity: 0.8;
 }
 @media (max-width: 991px) {
   h1 {
